# Youtube-Video-RAG

./: .gitignore  README.md  architecture-diagram.md  check_chroma.py  pyproject.toml
src/youtube_rag/: config.py  main.py
src/youtube_rag/api/: routes.py
src/youtube_rag/rag/: chunking.py  retrieval.py  vector_store.py
src/youtube_rag/schemas/: requests.py
src/youtube_rag/services/: embedding_service.py  llm_service.py  youtube_service.py
src/youtube_video_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
