[project]
name = "youtube-video-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.138.0",
    "langchain>=1.3.11",
    "langchain-text-splitters>=0.3.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.49.0",
    "youtube-transcript-api>=1.2.4",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]